[package]
name = "dsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["min_const_generics"] }
num-traits = "0.2.18"

[dev-dependencies]
insta = { version = "1.36.1", features = ["yaml"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-fuzz = "5.0.0"
arbitrary = { version = "1.3.2", features = ["derive"] }
serde = "1.0.197"

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3
