[package]
name = "dsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
arbitrary = { version = "1.3.2", features = ["derive"] }
bytemuck = { version = "1.15.0", features = ["min_const_generics"] }
lazy_static = "1.4.0"
num-traits = "0.2.18"
peak_alloc = "0.2.1"
rand = "0.8.5"
standard-dist = "1.0.0"
itertools = "0.12.1"

[dev-dependencies]
insta = { version = "1.36.1", features = ["yaml"] }
serde = "1.0.197"

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

